@@ -1,3 +1,7 @@
+version 2022c, in progress
+- Fix bug: fail after first iteration when adding a string to
+  an array of strings defined within a loop (noted by Luca)
+
 2022-08-09 version 2022b
 - new command/keyword "continue" for use in loops
 - new option --decr for use with index loops
